--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:WIfdDE88vYOrfC4tKJ4rezQbyx6vu+M8SZubl1GUI+Y=
 APP_DEBUG=true
 APP_URL=http://localhost
 
